--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,19 @@
 Checker
 =======
 
+It depends, unfortunately. They won't get 4/6, but they might get 4 (without a denominator) if code-check can't figure out what the total was because it died prematurely.
+
+It would be a good idea to have it figure out the total, perhaps by grading the solution. I'll add that to the wish list.
+
+Le 23/08/2013 22:40, Kathleen O'Brien a écrit :> If a student gets 4 of 6 expected values and then his code throws an 
+> exception doe he get 4/6 points or 0/6?
+> 
+
+------------------------------------------------------------------
+
 Shorten timeout, user selectable
 
 Limit stdout size, user selectable
-
-Add stdin to stdout
 
 ------------------------------------------------------------------
 
@@ -18,6 +26,8 @@ It will miss
 public static void main (String[] args)
 
 Instead, compile the solution and use reflection.
+
+This might be done once when the problem is first submitted. The other metadata worth saving is the total number of points.
 
 ---------------------------------------------------------------
 
