--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,109 @@
+=CodeCheck
+
+jdeprscan --class-path lib/checkstyle-5.7-all.jar:lib/hamcrest-core.jar:lib/jackson-annotations-2.6.4.jar:lib/jackson-core-2.6.4.jar:lib/jackson-databind-2.6.4.jar:lib/junit.jar codecheck.jar
+Jar file codecheck.jar:
+class com/horstmann/codecheck/CallMethod uses deprecated method java/lang/Thread::stop()V 
+class com/horstmann/codecheck/CallMethod uses deprecated method java/lang/Character::<init>(C)V 
+class com/horstmann/codecheck/JavaLanguage uses deprecated method java/lang/Thread::stop()V 
+
+
+
+Can we compare numbers by significant digits rather than by epsilon?
+
+
+https://docs.racket-lang.org/rackunit/quick-start.html
+
+mono-mcs  
+
+http://danml.com/download.html
+
+JSONP won't cut it--use only for worksheets
+need to make other JSON handler for same origin
+type=JSONS make that the default for non-codecheck
+
+Codecheck JdK 9
+Put junit, hamcrest on module path
+
+java.security.policy: error adding Entry:
+	java.net.MalformedURLException: unknown protocol: jrt
+
+grant codeBase "jrt:/jdk.compiler" {
+   permission java.security.AllPermission;
+};
+
+
+
+Should be possible to detect JAVA_HOME by finding the real path for
+`which java` in codecheck script
+
+https://en.wikipedia.org/wiki/Cross-origin_resource_sharing
+
+JUnit 5
+
+score and maxscore in new JSON instead of score/maxscore?
+
+http --form POST localhost:9000/checkJSON repo=bj4fp problem=ch04/c04_exp_4_8 Square.java=@/data/cay/codecheck/bj4fp/ch04/c04_exp_4_8/solution/Square.java | bcat
+
+codecheck -j hw1a
+
+http -j POST cs20.cs.sjsu.edu:8080/checkJson < /data/temp/test.json
+
+
+
+We need a bunch of permissions for Jackson and could put that
+into /opt/codecheck/lib/jackson and add it to the classpath.
+
+JUnit only needs
+
+  permission java.lang.RuntimePermission "accessDeclaredMembers";
+
+and we grant that to students and testers so they can do stuff with reflection
+
+This reorg would deal with an attack where a student puts arbitrary code into a JUnit test file.
+
+
+
+> - Is it possible to embed(in html) css stylesheets in the problem.html? I've tried it but codecheck seems to get rid of them
+
+
+codecheck download files link; what about //HIDE?
+
+Do s/th about ~/codecheck vs. ~/books/problems/solutions
+Fixed ch06/c06_exp_6_110
+
+It would be nice if when the Javadoc is correct, Checkstyle printed something other than pass - perhaps just the "OK"? or "style pass"?
+
+Ron codecheck bug Sun, 21 Jun 2015 23:55:32 System.exit in solution
+
+Codecheck--when one compares program output, and the student has an additional \n at the end, Codecheck fails in a hard-to-understand way.
+- Can one accept blank lines at the end when the solution has none?
+
+        // TODO: We only show students source files, not text or images
+        // Would be better to show those as well
+
+http://clang-analyzer.llvm.org/
+
+http://libcloud.apache.org/
+Codecheck bug with 04_11
+CodeCheck SQL, Scheme 
+   http://stackoverflow.com/questions/6380327/how-do-you-load-a-file-into-racket-via-command-line
+Codecheck
+Make it possible to turn off echoing of input in cc?
+
+
+
+Blog https://wiley.adobeconnect.com/_a44433639/p9ab13p2db7/?launcher=false&fcsContent=true&pbMode=normal
+In the future, I'll see if I can produce some diagnostics instead of the blank screen.
+I suppose I could mark them as "student" and "other". 
+ivy
+grep -l test.run=true ~/codecheck/*/*/*/*/check.properties
+
+
+Limiting CPU: http://www.howtoforge.com/how-to-limit-cpu-usage-with-cpulimit-on-ubuntu-linux
+Firejail: https://firejail.wordpress.com/
+
+
+
 AppArmor
 ========
 
